# nova-admin

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  run.txt  tailwind.config.js  vite.config.ts
django_nova_admin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nova_admin/: __init__.py  apps.py  context_processors.py  middleware.py
nova_admin/static/nova_admin/css/: theme.css
nova_admin/static/nova_admin/js/: theme.js
nova_admin/templates/admin/: app_index.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  index.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html
nova_admin/templatetags/: nova_admin_tags.py
nova_admin/utils/: __init__.py
nova_admin/widgets/: __init__.py
src/: App.tsx  data.ts  index.css  types.ts
