[build-system]
requires = [
    "setuptools>=69.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "django-nova-admin"
version = "1.0.0"
description = "A premium, modern, responsive Django admin theme built with Tailwind CSS and Alpine.js."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Anand Charukesan", email = "your-email@example.com" }
]

keywords = [
    "django",
    "django-admin",
    "admin",
    "theme",
    "dashboard",
    "tailwind",
    "alpinejs",
    "django-theme",
    "admin-theme",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/anandcharukesan/nova-admin"
Repository = "https://github.com/anandcharukesan/nova-admin"
Issues = "https://github.com/anandcharukesan/nova-admin/issues"
Documentation = "https://github.com/anandcharukesan/nova-admin#readme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nova_admin*"]

[tool.setuptools.package-data]
nova_admin = [
    "templates/**/*.html",
    "static/**/*",
]

[tool.setuptools.exclude-package-data]
nova_admin = [
    "*.pyc",
    "__pycache__/*",
]

[tool.pyright]
extraPaths = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src"
]